--- a/deploy/test/manifests.yaml
+++ b/deploy/test/manifests.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: opsconfig-operator
+  namespace: opsconfig
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -53,7 +54,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: opsconfig-operator
-  namespace: myproject
+  namespace: opsconfig
 roleRef:
   kind: ClusterRole
   name: cluster-admin
