--- a/deploy/manifests.yaml
+++ b/deploy/manifests.yaml
@@ -1,3 +1,18 @@
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: opsconfigs.ops.openshift.com
+spec:
+  group: ops.openshift.com
+  names:
+    kind: Opsconfig
+    listKind: OpsconfigList
+    plural: opsconfigs
+    singular: opsconfig
+  scope: Namespaced
+  version: v1alpha1
+
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -59,35 +74,3 @@ roleRef:
   kind: ClusterRole
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: opsconfig-operator
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      name: opsconfig-operator
-  template:
-    metadata:
-      labels:
-        name: opsconfig-operator
-    spec:
-      serviceAccountName: opsconfig-operator
-      containers:
-        - name: opsconfig-operator
-          # Replace this with the built image name
-          image: quay.io/aweiteka/opsconfig-operator:0.0.2
-          ports:
-          - containerPort: 60000
-            name: metrics
-          imagePullPolicy: Always
-          env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: OPERATOR_NAME
-              value: "opsconfig-operator"
