--- a/watches.yaml
+++ b/watches.yaml
@@ -5,4 +5,4 @@
 # CONTAINER packaged path
   playbook: /opt/ansible/playbook.yaml
 # LOCAL development
-# playbook: /path/to/my/playbook.yaml
+#  playbook: /home/aweiteka/go/src/github.com/aweiteka/opsconfig-operator/playbook.yaml
